--- a/ui/index.html
+++ b/ui/index.html
@@ -10,8 +10,10 @@
         <br>
         <div class="center text-big bold">
             Hi! I am your webapp and this is my first HTML file. :)
+            <h4>This is another line</h4>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
 </html>
+
